fixed header spacing, fixed capitalization error on home page, added Dpage with first piece of content

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,6 +1,6 @@
 .header {
   font-family: arial;
-  margin-top: 16vw;
+  margin-top: 4.25vw;
   margin-bottom: 10vw;
 }
 
